--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1,88 +1,501 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 
-/*SECCION HEADER*/
-.header{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 115px;
+:root {
+    --color-name-product: #464646;
+    --color-buttons:#2A7AE4;
+    --color-bg-footer: #EAF2FD;
+    --text-size-large: 16px;
+    --text-size-small: 14px;
 }
 
-.header__search_and_login{
-    width: 70%;
-    margin-left: 30px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    /*SEECION HEADER*/
+    .header{
+        height: 72px;
+        padding: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .header__logo{
+        width: 100px;
+        height: 28px;
+    }
+
+    .header__search_and_login{
+        width: 65%;
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .header__search input{
+        display: none;
+    }
+
+    .header__search img{
+        cursor: pointer;
+    }
+    
+    .header__button__login{
+        text-decoration: none;
+        border: #2A7AE4 solid 2px;
+        background-color: #FFF;
+        font-size: var(--text-size-small);
+        font-weight: 600;
+        color: var(--color-buttons);
+        width: 133px;
+        height: 40px;
+        text-align: center;
+        line-height: 2.4;
+    }
+
+    .header__button__login:hover{
+        background-color: var(--color-buttons);
+        color: #FFF;
+    }
+    /*FIN SECCION HEADER*/
+
+    /*SECCION BANNER*/
+    .banner{
+        display: flex;
+        align-items: flex-end;
+        justify-content: flex-start;
+        height: 192px;
+        background: url('../images/image-banner.png') no-repeat center / cover;
+        padding: 16px;
+    }
+
+    .banner__text{
+        width: 91%;
+        height: 98px;
+        color: #FFF;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+
+    .banner__text .banner__title{
+        font-size: 22px;
+    }
+
+    .banner__text .banner__description{
+        font-size: var(--text-size-small);
+        font-weight: 500;
+    }
+
+    .banner__text .banner__button{
+        border: #2A7AE4 solid 1px;
+        background-color: var(--color-buttons);
+        font-size: var(--text-size-small);
+        color: #FFF;
+        width: 118px;
+        height: 40px;
+    }
+    /*FIN SECCION BANNER*/
+
+    /*SEECION MAIN PRODUCTS*/
+    .product{
+        padding: 16px;
+    }
+
+    .product__top{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 16px;
+    }
+
+    .product__top .product__button{
+        border: none;
+        background-color: #FFF;
+    }
+
+    .product__button a{
+        text-decoration: none;
+        color: var(--color-buttons);
+        font-size: var(--text-size-small);
+        font-weight: 700;
+    }
+
+    .product__button img{
+        vertical-align: middle;
+    }
+
+    .product__grid{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 249px);
+        gap: 16px;
+    }
+
+    .product__item{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .product__data__description{
+        align-self: flex-start;
+    }
+
+    .product__grid .product__item:nth-child(5),
+    .product__grid .product__item:nth-child(6){
+        display: none;
+        grid-column: none;
+        grid-row: none;
+    }
+
+    .product__item .product__image{
+        width: 156px;
+        height: 174px;
+    }
+
+    .product__data__description .product__data{
+        margin-top: 8px;
+    }
+
+    .product__data__description .data--name{
+        font-size: var(--text-size-small);
+        color: var(--color-name-product);
+    }
+
+    .product__data__description .data--price{
+        font-size: var(--text-size-large);
+        font-weight: 700;
+    }
+
+    .product__data__description .data--button{
+        border: none;
+        background-color: #FFF;
+    }
+
+    .data--button a{
+        text-decoration: none;
+        color: var(--color-buttons);
+        font-size: var(--text-size-small);
+        font-weight: 700;
+    }
+    /*FIN SEECCION MAIN PRODUCTS*/
+
+    /*SECCION FOOTER*/
+    .footer__informaction__contact{
+        background-color: var(--color-bg-footer);
+        padding: 16px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .information{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-around;
+        margin-bottom: 32px;
+    }
+
+    .footer__logo .logo{
+        width: 176px;
+        height: 50px;
+    }
+
+    .information__list{
+        text-align: center;
+        list-style: none;
+    }
+
+    .information__item{
+        margin-top: 16px;
+    }
+
+    .item__link{
+        text-decoration: none;
+        color:#464646;
+    }
+
+    .form__contact{
+        padding: 8px 0;
+    }
+
+    .form__contact .form__label:first-child{
+        margin-bottom: 16px;
+    }
+
+    .form__label{
+        background-color: #FFF;
+        padding: 6px 12px;
+        display: flex;
+        flex-direction: column;
+        font-size: 12px;
+        color: #A2A2A2;
+    }
+
+    .form__input{
+        font-size: var(--text-size-large);
+        border: none;
+        outline: none;
+    }
+
+    .form__textarea{
+        border: none;
+        resize: none;
+        outline: none;
+    }
+
+    .form__button{
+        border: none;
+        background-color: var(--color-buttons);
+        color: #FFF;
+        width: 133px;
+        height: 40px;
+        margin-top: 8px;
+        cursor: pointer;
+    }
+
+    .form__button:hover{
+        background-color: #2366bd;
+    }
+
+    .copyright{
+        padding: 32px;
+        height: 102px;
+        text-align: center;
+    }
+    /*FIN SECCION FOOTER*/
+
+@media (min-width: 768px) {
+    /*SECCION HEADER*/
+    .header{
+        padding: 16px 32px;
+    }
+
+    .header__search_and_login{
+        width: 80%;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .header__search{
+        background-color: #F5F5F5;
+        border-radius: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 272px;
+        padding: 8px 12px;
+    }
+
+    .header__search input{
+        display: block;
+        background-color: #F5F5F5;
+        border: none;
+        outline: none;
+        width: 100%;
+    }
+
+    .header__button__login{
+        width: 166px;
+        cursor: pointer;
+    }
+    /*FIN SECCION HEADER*/
+
+    /*SECCION BANNER*/
+    .banner{
+        height: 352px;
+        padding: 32px;
+    }
+    
+    .banner__text{
+        width: 704px;
+        height: 159px;
+    }
+    
+    .banner__text .banner__title{
+        font-size: 52px;
+    }
+
+    .banner__text .banner__description{
+        font-size: 22px;
+    }
+
+    .banner__text .banner__button{
+        cursor: pointer;
+    }
+    /*FIN SECCION BANNER*/
+
+    /*SEECION MAIN PRODUCTS*/
+    .main__content__products{
+        width: 100%;
+        margin: auto;
+    }
+
+    .product{
+        padding: 32px;
+    }
+
+    .product__top .product__button{
+        cursor: pointer;
+    }
+
+    .product__grid{
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(1, 249px);
+    }
+
+    .product__item{
+        align-items: flex-start;
+    }
+
+    .product__data__description{
+        align-self: flex-start;
+    }
+
+    .product__item .product__image{
+        width: 164px;
+        height: 174px;
+    }
+
+    .product__data__description .data--button{
+        font-size: var(--text-size-large);
+        cursor: pointer;
+    }
+    /*FIN SEECCION MAIN PRODUCTS*/
+
+    /*SECCION FOOTER*/
+    .footer__informaction__contact{
+        padding: 32px;
+        flex-direction: row;
+    }
+
+    .information{
+        width: 40%;
+    }
+
+    .contact{
+        width: 60%;
+    }
+
+    .information__list{
+        text-align: start;
+    }
+
+    .form__textarea{
+        height: 82px;
+    }
+    /*FIN SECCION FOOTER*/
 }
 
-.header__search_and_login .header__search{
-    width: 393px;
-    height: 40px;
-    border-radius: 20px;
-    background-color: #F5F5F5;
-    padding: 8px 16px;
-}
+@media (min-width: 1024px ) and (max-width: 1920px) {
+    /*SEECION HEADER*/
+    .header{
+        height: 115px;
+        padding: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 
-.header__search input{
-    background-color: #F5F5F5;
-    font-size: 14px;
-    border: none;
-    width: 329px;
-}
+    .header__logo{
+        width: 176px;
+        height: 50px;
+    }
 
-.header__search img{
-    vertical-align: middle;
-    margin-left: 8px;
-}
+    .header__search_and_login{
+        width: 70%;
+        justify-content: space-between;
+    }
 
-.header__search_and_login .header__button__login{
-    background-color: #FFF;
-    font-size: 16px;
-    color: #2A7AE4;
-    border: 1px solid #2A7AE4;
-    width: 182px;
-    height: 51px;
-}
+    .header__search{
+        width: 393px;
+        margin-left: 32px;
+    }
+    /*FIN SECCION HEADER*/
 
-/*FIN SECCION HEADER*/
+    /*SECCION BANNER*/
+    .banner{
+        justify-content: center;
+    }
 
-/*SECCION BANNER*/
-section.banner{
-    background: url('../images/image-banner.png') no-repeat center;
-    background-size: cover;
-    height: 352PX;
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-}
+    .banner__text{
+        max-width: 1565px;
+        height: 175px;
+        align-items: center;
+    }
 
-.banner .banner__text{
-    width: 1136px;
-    height: 170px;
-    color: #FFF;
-    margin-bottom: 32px;
-}
+    .banner__text .banner__button{
+        font-size: var(--text-size-large);
+        width: 120px;
+        height: 51px;
+        cursor: pointer;
+    }
+    /*FIN SECCION BANNER*/
 
-.banner__text .banner__title{
-    font-size: 52px;
-}
+    /*SEECION MAIN PRODUCTS*/
+    .main__content__products{
+        width: 80%;
+        margin: 64px auto;
+    }
+    .product{
+        padding: 32px;
+    }
 
-.banner__text .banner__decription{
-    font-size: 22px;
-    margin: 16px 0px;
-}
+    .product__top .product__button{
+        font-size: var(--text-size-large);
+    }
 
-.banner .banner__button{
-    background-color: #2A7AE4;
-    font-size: 16px;
-    border: 1px solid #2A7AE4;
-    color: #FFF;
-    width: 129px;
-    height: 51px;
+    .product__grid{
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(1, 1fr);
+        gap: 1fr;
+    }
+
+    .product__grid .product__item:nth-child(5),
+    .product__grid .product__item:nth-child(6){
+        display: flex;
+        grid-column:auto;
+        grid-row: auto;
+    }
+
+    .product__item{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+        height: 100%;
+    }
+
+    .product__item .product__image{
+        width: 100%;
+        height: 100%;
+    }
+    /*FIN SEECCION MAIN PRODUCTS*/
+
+    /*SECCION FOOTER*/
+    .footer__informaction__contact{
+        padding: 32px 130px;
+        flex-direction: row;
+    }
+
+    .information{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .footer__logo .logo{
+        width: 176px;
+        height: 50px;
+    }
+
+    /*FIN SECCION FOOTER*/
 }
